--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -2,75 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Todo</title>
-    <meta name="viewport" content="inital-scale=1, maximum-scale=1, user-scalable=no width=device-width">
+    <title>staRt</title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
     <link rel="stylesheet" href="lib/ionic/css/ionic.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="cordova.js"></script>
   </head>
-  <body ng-app="todo" ng-controller="TodoCtrl">
-    <ion-side-menus>
-
-      <!-- Center content -->
-      <ion-side-menu-content>
-        <ion-header-bar class="bar-dark">
-          <button class="button button-icon" ng-click="toggleProjects()">
-            <i class="icon ion-navicon"></i>
-          </button>
-          <h1 class="title">{{activeProject.title}}</h1>
-          <button class="button button-icon" ng-click="newTask()">
-            <i class="icon ion-compose"></i>
-          </button>
-        </ion-header-bar>
-        <ion-content>
-          <!-- our list and list items -->
-          <ion-list>
-            <ion-item ng-repeat="task in activeProject.tasks">
-              {{task.title}}
-            </ion-item>
-          </ion-list>
-        </ion-content>
-      </ion-side-menu-content>
-
-      <!-- Left menu -->
-      <ion-side-menu side="left">
-        <ion-header-bar class="bar-dark">
-          <h1 class="title">Projects</h1>
-          <button class="button button-icon ion-plus" ng-click="newProject()"></button>
-        </ion-header-bar>
-        <ion-content scroll="false">
-          <ion-list>
-            <ion-item ng-repeat="project in projects" ng-click="selectProject(project, $index)" ng-class="{active: activeProject == project}">
-              {{project.title}}
-            </ion-item>
-          </ion-list>
-        </ion-content>
-      </ion-side-menu>
-
-      <script id="new-task.html" type="text/ng-template">
-        <div class="modal">
-          <!-- Modal header bar -->
-          <ion-header-bar class="bar-secondary">
-            <h1 class="title">New Task</h1>
-            <button class="button button-clear button-positive" ng-click="closeNewTask()">Cancel</button>
-          </ion-header-bar>
-          <!-- Modal content area -->
-          <ion-content>
-            <form ng-submit="createTask(task)">
-              <div class="list">
-                <label class="item item-input">
-                  <input type="text" placeholder="What do you need to do?" ng-model="task.title">
-                </label>
-              </div>
-              <div class="padding">
-                <button type="submit" class="button button-block button-positive">Create Task</button>
-              </div>
-            </form>
-          </ion-content>
+  <body ng-app="start" ng-controller="StartCtrl">
+    <div id="app-container">
+      <div id="nav-container">
+        <list class="navTabs">
+          <item ng-repeat="title in tabTitles" class="navTab" ng-click="selectIndex($index)">
+            <div class="navTabText">
+              {{title}}
+            </div>
+          </item>
+        </list>
+      </div>
+      <div id="content-container">
+        <div class="navTabText title bigtext">
+          {{content}}
         </div>
-      </script>
-
-    </ion-side-menus>
+      </div>
+    </div>
   </body>
 </html>
