--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -21,11 +21,19 @@
           </item>
         </list>
       </div>
-      <div id="content-container">
-        <div class="navTabText title bigtext">
-          {{content}}
+      <div id="content-container" ng-controller="LPCCtrl">
+        <div id="text-content">
+          <div class="navTabText title bigtext">
+            {{content}}
+          </div>
+        </div>
+        <div id="lpc-container">
+          <canvas id="lpc-canvas" ng-click="drawRandomPoints()"></canvas>
         </div>
       </div>
     </div>
+
+    <script src="lib/three/three.min.js"></script>
+    <script src="js/test-three.js"></script>
   </body>
 </html>
