Actually drawing some audio, hooray. Starting to add LPC calculation

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -21,7 +21,7 @@
           </item>
         </list>
       </div>
-      <div id="content-container" ng-controller="LPCCtrl">
+      <div id="content-container">
         <div id="text-content">
           <div class="navTabText title bigtext">
             {{content}}
@@ -34,7 +34,7 @@
     </div>
 
     <script src="lib/three/three.min.js"></script>
+    <script src="lib/p5/p5.dom.js"></script>
     <script src="lib/p5/p5.min.js"></script>
-    <script src="js/test-three.js"></script>
   </body>
 </html>
