--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -9,6 +9,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="cordova.js"></script>
+    <script src="lib/localforage/localforage.min.js"></script>
+    <script src="lib/localforage/angular-localForage.js"></script>
   </head>
   <body ng-app="start" ng-controller="StartCtrl">
     <div id="app-container">
