Actually sending JSON to the native code and doing the recording holy shit

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -25,6 +25,7 @@
       </div>
       <div id="content-container">
         <div id="text-content">
+          <div ng-click="startRecordingDefault()">I'm a button</div>
           <div class="navTabText title bigtext">
             {{content}}
           </div>
