Add LPC directive

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -31,9 +31,7 @@
             {{content}}
           </div>
         </div>
-        <div id="lpc-container">
-          <!-- <canvas id="lpc-canvas" ng-click="drawRandomPoints()"></canvas> -->
-        </div>
+        <lpc-directive></lpc-directive>
       </div>
     </div>
 
@@ -45,10 +43,10 @@
     <script src="app_module.js"></script>
     <script src="states/root/root_controller.js"></script>
     <script src="states/root/root_module.js"></script>
-    <script src="states/root/free-play/free-play_controller.js"></script>
-    <script src="states/root/free-play/free-play_module.js"></script>
     <script src="states/root/auto/auto_controller.js"></script>
     <script src="states/root/auto/auto_module.js"></script>
+    <script src="states/root/free-play/free-play_controller.js"></script>
+    <script src="states/root/free-play/free-play_module.js"></script>
     <script src="states/root/profiles/profiles_controller.js"></script>
     <script src="states/root/profiles/profiles_module.js"></script>
     <script src="states/root/resources/resources_controller.js"></script>
@@ -59,6 +57,7 @@
     <script src="states/root/tutorial/tutorial_module.js"></script>
     <script src="states/root/words/words_controller.js"></script>
     <script src="states/root/words/words_module.js"></script>
+    <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_module.js"></script>
     <script src="common-components/start-state-service/start-state-service_module.js"></script>
     <!-- endinject -->
