Adding goofy buttons to test recording

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -25,7 +25,9 @@
       </div>
       <div id="content-container">
         <div id="text-content">
-          <div ng-click="startRecordingDefault()">I'm a button</div>
+          <div class="testbutton" ng-click="startRecordingDefault()">Start Recording</div>
+          <div class="testbutton" ng-click="stopRecording()">Stop Recording</div>
+          <div class="testbutton" ng-click="isRecording()">Is Recording</div>
           <div class="navTabText title bigtext">
             {{content}}
           </div>
