Turns out I was writing an illegal \0 character into the CSV file, which was ruining anything

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -28,6 +28,7 @@
           <div class="testbutton" ng-click="startRecordingDefault()">Start Recording</div>
           <div class="testbutton" ng-click="stopRecording()">Stop Recording</div>
           <div class="testbutton" ng-click="isRecording()">Is Recording</div>
+          <div class="testbutton" ng-click="listRecordingsDefault()">List Recordings</div>
           <div class="navTabText title bigtext">
             {{content}}
           </div>
