--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -2,4 +2,5 @@
 	<div class="navTabText title bigtext">
 		Auto session exercises coming soon...
 	</div>
+	<lpc-directive></lpc-directive>
 </ion-view>
