Fix LPC append bug

--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Free Play" id="text-content">
+<ion-view view-title="Free Play" class="text-content">
 	<div class="navTabText title bigtext">
 		Auto session exercises coming soon...
 	</div>
