--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profiles" id="text-content">
+<ion-view view-title="Profiles" class="text-content">
 	<div class="navTabText title bigtext">
 		Auto session exercises coming soon...
 	</div>
