--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Resources" id="text-content">
+<ion-view view-title="Resources" class="text-content">
 	<div class="navTabText title bigtext">
 		Auto session exercises coming soon...
 	</div>
