--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Words" id="text-content">
+<ion-view view-title="Words" class="text-content">
 	<div class="navTabText title bigtext">
 		Auto session exercises coming soon...
 	</div>
