Add nav bar to header

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -15,6 +15,7 @@
 
   </head>
   <body ng-app="start">
+    <ion-nav-bar></ion-nav-bar>
     <ion-nav-view name="app-view" id="app-container"></ion-nav-view>
 
     <script src="lib/three/three.min.js"></script>
