--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -1,6 +1,15 @@
-<ion-view view-title="Resources" class="text-content">
+<ion-view view-title="SLP Resources" class="text-content">
 	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+		Use the slider to manually adjust the LPC filter order.
+		<strong>
+			In general, the filter order should be between 35 and 45.
+		</strong>
 	</div>
+	<p>
+		The filter order is now <em>39</em>
+	</p>
+	<p>
+		Would you like to save this value to [name]'s user account?
+	</p>
 	<lpc-directive></lpc-directive>
 </ion-view>
