--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -10,8 +10,12 @@
       </item>
     </list>
   </div>
+  
+  <!-- Title Bar -->
+  <ion-nav-bar></ion-nav-bar>
 
   <!-- Content -->
   <ion-nav-view name="content-view" id="content-container">
   </ion-nav-view>
+  
 </ion-view>
