--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/">
+    <!-- <base href="/"> -->
     <meta charset="utf-8">
     <title>staRt</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
