Re-add cordova.js — fix LPC

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <!-- <base href="/"> -->
     <meta charset="utf-8">
     <title>staRt</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
     <link rel="stylesheet" href="lib/ionic/css/ionic.css">
     <link rel="stylesheet" href="css/style.css">
-    
-<!--     // <script src="lib/ionic/js/ionic.bundle.js"></script>
-    // <script src="cordova.js"></script>
-    // <script src="lib/localforage/localforage.min.js"></script>
-    // <script src="https://cdn.rawgit.com/ocombe/angular-localForage/master/dist/angular-localForage.min.js"></script> -->
-
   </head>
+
   <body ng-app="start">
     <ion-nav-view name="app-view" id="app-container"></ion-nav-view>
-
-    <!-- // <script src="lib/p5/p5.dom.js"></script> -->
-    <!-- // <script src="lib/p5/p5.min.js"></script> -->
 
     <!-- inject:bower:js  -->
     <script src="lib/localforage/dist/localforage.js"></script>
@@ -55,5 +47,8 @@
     <script src="states/root/root_controller.js"></script>
     <script src="app_module.js"></script>
     <!-- endinject -->
+
+    <script src="cordova.js"></script>
+
   </body>
 </html>
