--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,3 +1,3 @@
-<div id="lpc-container">
+<div class="lpc-container">
   <!-- <canvas id="lpc-canvas" ng-click="drawRandomPoints()"></canvas> -->
 </div>
