Update state template class names

--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Free Play" class="text-content">
-	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+	<div class="text-and-lpc__text">
+		Play around for free I guess
 	</div>
 	<lpc-directive></lpc-directive>
 </ion-view>
