--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Words" class="text-content">
-	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+	<div class="text-and-lpc__text">
+		Different words and stuff
 	</div>
 	<lpc-directive></lpc-directive>
 </ion-view>
