--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Auto" class="text-content">
-	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+	<div class="text-and-lpc__text">
+		Auto, whatever that means
 	</div>
 </ion-view>
