--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Profiles" class="text-content">
-	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+	<div class="text-and-lpc__text">
+		A whole bunch of Profles
 	</div>
 </ion-view>
