--- a/staRt/www/states/root/syllables/syllables_template.html
+++ b/staRt/www/states/root/syllables/syllables_template.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Syllables" class="text-content">
-	<div class="navTabText title bigtext">
-		Auto session exercises coming soon...
+	<div class="text-and-lpc__text">
+		Syl-la-bles
 	</div>
 </ion-view>
