--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -3,8 +3,9 @@
 		<p>
 			Use the slider to manually adjust the LPC filter order. <strong>In general, the filter order should be between 35 and 45.</strong>
 		</p>
+		<input type="range" min="25" max="45" ng-model="lpcOrder" ng-change="updatePluginLPCOrder()"/>
 		<p>
-			The filter order is now <em>39</em>
+			The filter order is now <em>{{lpcOrder}}</em>
 		</p>
 		<p>
 			Would you like to save this value to [name]'s user account?
