Add styles and mock data for profiles

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -6,7 +6,7 @@
     <title>staRt</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
     <link rel="stylesheet" href="lib/ionic/css/ionic.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/app_styles.css">
   </head>
 
   <body ng-app="start">
@@ -29,10 +29,10 @@
     <script src="common-components/start-state-service/start-state-service_module.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_module.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
-    <script src="states/root/tutorial/tutorial_module.js"></script>
-    <script src="states/root/tutorial/tutorial_controller.js"></script>
     <script src="states/root/words/words_module.js"></script>
     <script src="states/root/words/words_controller.js"></script>
+    <script src="states/root/tutorial/tutorial_module.js"></script>
+    <script src="states/root/tutorial/tutorial_controller.js"></script>
     <script src="states/root/syllables/syllables_module.js"></script>
     <script src="states/root/syllables/syllables_controller.js"></script>
     <script src="states/root/resources/resources_module.js"></script>
