Switched to threejs for rendering the wave. Looking waaaay better, with a much higher frame rate

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -21,10 +21,11 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-localforage/dist/angular-localForage.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/three.js/build/three.js"></script>
     <script src="lib/ionic/js/ionic.js"></script>
     <script src="lib/ionic/js/ionic-angular.js"></script>
     <!-- endinject -->
-    
+
     <!-- inject:js -->
     <script src="common-components/start-state-service/start-state-service_module.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_module.js"></script>
