--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -1,12 +1,21 @@
 <ion-view view-title="SLP Resources" class="text-and-lpc">
-	<div class="text-and-lpc__text">
+	<div class="text-and-lpc__text resources">
 		<p>
 			Use the slider to manually adjust the LPC filter order. <strong>In general, the filter order should be between 35 and 45.</strong>
 		</p>
-		
-		<div class="item range">
-			<input type="range" min="25" max="45" ng-model="lpcOrder" ng-change="updatePluginLPCOrder()"/>
+
+		<div class="range-container">
+			<div class="range-label">
+				min. 25
+			</div>
+			<div class="item range">
+				<input type="range" min="25" max="45" ng-model="lpcOrder" ng-change="updatePluginLPCOrder()"/>
+			</div>
+			<div class="range-label">
+				max. 45
+			</div>
 		</div>
+		
 		
 		<p>
 			The filter order is now <em>{{lpcOrder}}</em>
