Animate tab switching

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -3,7 +3,10 @@
   <!-- Tabs -->
   <div id="nav-container">
     <list class="navTabs">
-      <item ng-repeat="tab in tabData" class="navTab" ui-sref='{{ "root." + tab.sref }}'>
+      <item
+        ng-repeat="tab in tabData" class="navTab"
+        ui-sref="{{ 'root.' + tab.sref }}"
+        ng-class="{ 'active': state.current.url === tab.sref }">
         <div class="navTabText">
           {{tab.title}}
         </div>
