--- a/staRt/www/states/root/tutorial/tutorial_template.html
+++ b/staRt/www/states/root/tutorial/tutorial_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Auto" class="text-content">
+<ion-view view-title="Tutorial" class="text-content">
 	<div class="text-and-lpc__text">
 		A great big tutorial
 	</div>
