--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -2,5 +2,5 @@
 	<div class="text-and-lpc__text">
 		Play around for free I guess
 	</div>
-	<lpc-directive></lpc-directive>
+	<lpc-directive slider="true"></lpc-directive>
 </ion-view>
