--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -20,5 +20,6 @@
 	<ion-radio ng-model="rating" ng-value="1" ng-hide="!isPracticing">Poor</ion-radio>
 	<ion-radio ng-model="rating" ng-value="2" ng-hide="!isPracticing">Decent</ion-radio>
 	<ion-radio ng-model="rating" ng-value="3" ng-hide="!isPracticing">Great</ion-radio>
-	<lpc-directive></lpc-directive>
+	
+	<lpc-directive slider="true"></lpc-directive>
 </ion-view>
