See #16 -- LPC can be resized now. Of course, I don't really know how to style it so that is will actually resize, but it can, in principle, be resized

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -22,6 +22,7 @@
     <script src="lib/angular-localforage/dist/angular-localForage.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/three.js/build/three.js"></script>
+    <script src="lib/ng-resize/index.js"></script>
     <script src="lib/ionic/js/ionic.js"></script>
     <script src="lib/ionic/js/ionic-angular.js"></script>
     <!-- endinject -->
@@ -36,14 +37,14 @@
     <script src="states/root/tutorial/tutorial_controller.js"></script>
     <script src="states/root/syllables/syllables_module.js"></script>
     <script src="states/root/syllables/syllables_controller.js"></script>
-    <script src="states/root/resources/resources_module.js"></script>
-    <script src="states/root/resources/resources_controller.js"></script>
     <script src="states/root/profiles/profiles_module.js"></script>
     <script src="states/root/profiles/profiles_controller.js"></script>
-    <script src="states/root/auto/auto_module.js"></script>
-    <script src="states/root/auto/auto_controller.js"></script>
+    <script src="states/root/resources/resources_module.js"></script>
+    <script src="states/root/resources/resources_controller.js"></script>
     <script src="states/root/free-play/free-play_module.js"></script>
     <script src="states/root/free-play/free-play_controller.js"></script>
+    <script src="states/root/auto/auto_module.js"></script>
+    <script src="states/root/auto/auto_controller.js"></script>
     <script src="states/root/root_module.js"></script>
     <script src="states/root/root_controller.js"></script>
     <script src="app_module.js"></script>
