--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,7 +1,7 @@
 <div class="lpc-container">
 	<!-- <canvas id="lpc-canvas" ng-click="drawRandomPoints()"></canvas> -->
 	<div ng-if="slider" class="item range">
-		<input type="range" min="0" max="4500" ng-model="lpcOrder" ng-change="updateFilter()" data-thumbwidth="50" value="3000"/>
+		<input type="range" min="0" max="4500" ng-model="lpc" ng-change="updateFilter()" data-thumbwidth="50" value="3000"/>
 		<output name="rangeVal">50</output>
 	</div>
 </div>
