--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,3 +1,3 @@
 <div class="lpc-container">
-  <canvas id="lpc-canvas" ng-resize="scaleContext()"></canvas>
+  <canvas id="lpc-canvas"></canvas>
 </div>
