See #14 -- resetting f3 norm according to CSV file

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,6 +1,10 @@
 <!-- LPC stuff wrapper -->
 <div class="lpc-container">
 
+	<button style="margin:40px;" ng-click="resetF3()">
+		Reset F3
+	</button>
+
 	<!-- LPC itself -->
 	<canvas id="lpc-canvas"></canvas>
 
