--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -6,7 +6,7 @@
 
 	<!-- Slider -->
 	<div ng-if="slider" class="item range">
-		<input type="range" min="0" max="4500" ng-model="lpc" ng-change="updateTarget()" data-thumbwidth="50" value="3000"/>
+		<input type="range" min="0" max="4500" ng-model="targetF3" ng-change="updateTarget()" data-thumbwidth="50" value="3000"/>
 		<output name="rangeVal">50</output>
 	</div>
 
