--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -7,11 +7,11 @@
 		</h2>
 
 		<ion-radio
-			ng-model="data.currentUser"
-			ng-repeat="user in profiles"
-			ng-value="{{user}}"
-			ng-change="updateCurrentUser()">
-				{{ (user.name === undefined) ? 'New Profile' : user.name }}
+			ng-model="data.currentProfile"
+			ng-repeat="profile in profiles"
+			ng-value="{{profile}}"
+			ng-change="updateCurrentProfile()">
+				{{ (profile.name === undefined) ? 'New Profile' : profile.name }}
 		</ion-radio>
 
 		<button class="button create text-and-lpc profiles" ng-click="createProfile()">
@@ -25,28 +25,28 @@
 
 	<div class="profiles__info">
 		<ul class="list">
-			<h2>{{data.currentUser.name}}</h2>
-			<h3>uuid: {{data.currentUser.uuid}}</h3>
+			<h2>{{data.currentProfile.name}}</h2>
+			<h3>uuid: {{data.currentProfile.uuid}}</h3>
 			<li>
 				<strong>Name:</strong>
-				<input type="text" name="name" class="profiles" ng-model="data.currentUser.name" placeholder="Name" ng-class="editing" ng-disabled="!isEditing">
+				<input type="text" name="name" class="profiles" ng-model="data.currentProfile.name" placeholder="Name" ng-class="editing" ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Age:</strong>
-				<input type="number" name="age" class="profiles" min="1" max="99" ng-model="data.currentUser.age" placeholder="Age" ng-class="editing" ng-disabled="!isEditing">
+				<input type="number" name="age" class="profiles" min="1" max="99" ng-model="data.currentProfile.age" placeholder="Age" ng-class="editing" ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Height Feet:</strong>
-				<input type="number" name="heightFeet" class="profiles" min="0" max="8" ng-model="data.currentUser.heightFeet" placeholder="Feet" ng-class="editing" ng-disabled="!isEditing">
+				<input type="number" name="heightFeet" class="profiles" min="0" max="8" ng-model="data.currentProfile.heightFeet" placeholder="Feet" ng-class="editing" ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Inches:</strong>
-				<input type="number" name="heightInches" class="profiles" min="0" max="11" ng-model="data.currentUser.heightInches" placeholder="Inches" ng-class="editing" ng-disabled="!isEditing">
+				<input type="number" name="heightInches" class="profiles" min="0" max="11" ng-model="data.currentProfile.heightInches" placeholder="Inches" ng-class="editing" ng-disabled="!isEditing">
 			</li>
 			<li>
 				<strong>Sex:</strong>
-				<ion-radio ng-model="data.currentUser.gender" ng-value="'Male'" ng-class="editing" ng-disabled="!isEditing">Male</ion-radio>
-				<ion-radio ng-model="data.currentUser.gender" ng-value="'Female'" ng-class="editing" ng-disabled="!isEditing">Female</ion-radio>
+				<ion-radio ng-model="data.currentProfile.gender" ng-value="'Male'" ng-class="editing" ng-disabled="!isEditing">Male</ion-radio>
+				<ion-radio ng-model="data.currentProfile.gender" ng-value="'Female'" ng-class="editing" ng-disabled="!isEditing">Female</ion-radio>
 			</li>
 
 			<li>
