Attempt to fix range updating

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -10,8 +10,10 @@
 
 	<!-- Slider -->
 	<div ng-if="slider" class="item range">
-		<input type="range" min="0" max="4500" ng-model="targetF3" ng-change="updateTarget()" data-thumbwidth="50" value="3000"/>
-		<output name="rangeVal">50</output>
+		<input type="range" min="0" max="4500" ng-model="targetF3"  data-thumbwidth="50"/>
+		<output name="rangeVal"></output>
 	</div>
 
 </div>
+
+<!-- ng-change="updateTarget()" -->
