fixed -- LPC disappearing after transition

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -4,9 +4,7 @@
 </button>
 <div class="lpc-container">
 
-
-	<!-- LPC itself -->
-	<canvas id="lpc-canvas"></canvas>
+	<!-- Renderer will be inserted here -->
 
 	<!-- Slider -->
 	<div ng-if="slider" class="item range">
