Update LPC slider data binding

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -10,10 +10,18 @@
 
 	<!-- Slider -->
 	<div ng-if="slider" class="item range">
-		<input type="range" min="0" max="4500" ng-model="targetF3"  data-thumbwidth="50"/>
+
+		<input
+			type="range"
+			min="0"
+			max="4500"
+			ng-model="data.targetF3"
+			ng-change="updateTarget()"
+			data-thumbwidth="50"/>
+
 		<output name="rangeVal"></output>
 	</div>
 
 </div>
 
-<!-- ng-change="updateTarget()" -->
+<!--  -->
