Remove default users, wire 'Delete All', fix 'Create New', fix profiles service

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -8,7 +8,7 @@
 
 		<ion-radio
 			ng-model="data.currentProfile"
-			ng-repeat="profile in profiles"
+			ng-repeat="profile in data.profiles"
 			ng-value="{{profile}}"
 			ng-change="updateCurrentProfile()">
 				{{ (profile.name === undefined) ? 'New Profile' : profile.name }}
